--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,5 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body class="bg-yellow-500">
-    <div class="mx-3">Gag</div>
-  </body>
+  <body class="bg-secondary-200"></body>
 </html>
